Сделана планшетная версия всего

--- a/source/cart.html
+++ b/source/cart.html
@@ -392,6 +392,152 @@
         </form>
       </section>
 
+      <section class="product-page__same  same-products">
+        <div class="same-products__content">
+          <h2 class="same-products__heading">Также вам могут подойти эти товары</h2>
+          <ul class="same-products__list">
+            <li class="same-products__item  same-product">
+              <div class="same-product__image">
+                <p class="same-product__sticker  same-product__sticker--new">Новинка</p>
+                <p class="same-product__sticker  same-product__sticker--sale">Sale</p>
+                <p class="same-product__sticker  same-product__sticker--hit">Хит</p>
+                <picture>
+                  <source srcset="img/popular-woman-1-desktop.png" media="(min-width: 1170px)">
+                  <source srcset="img/popular-woman-1-tablet.png" media="(min-width: 760px)">
+                  <img src="img/popular-woman-1.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+                </picture>
+
+                <div class="same-product__overlay">
+                  <h4 class="same-product__overlay-heading">Доступные размеры</h4>
+                  <ul class="same-product__measurements-list">
+                    <li class="same-product__measurements-item">42</li>
+                    <li class="same-product__measurements-item">44</li>
+                    <li class="same-product__measurements-item">46</li>
+                    <li class="same-product__measurements-item">48</li>
+                    <li class="same-product__measurements-item">50</li>
+                    <li class="same-product__measurements-item">52</li>
+                    <li class="same-product__measurements-item">54</li>
+                    <li class="same-product__measurements-item">56</li>
+                    <li class="same-product__measurements-item">58</li>
+                  </ul>
+                  <a class="same-product__quick-view  js-quick-view  js-quick-view" href="#">
+                    <svg>
+                      <use xlink:href="#spr-view"></use>
+                    </svg>
+                    Быстрый просмотр
+                  </a>
+                </div>
+              </div>
+              <div class="same-product__info">
+                <h3 class="same-product__heading">
+                  Костюм медицинский К-74 «Фаина»
+                </h3>
+                <p class="same-product__price">
+                  900 руб
+                </p>
+                <a class="same-product__watch" href="#">
+                  <svg>
+                    <use xlink:href="#spr-view"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+
+            <li class="same-products__item  same-product">
+              <div class="same-product__image">
+                <p class="same-product__sticker  same-product__sticker--new">Новинка</p>
+                <p class="same-product__sticker  same-product__sticker--sale">Sale</p>
+                <p class="same-product__sticker  same-product__sticker--hit">Хит</p>
+                <picture>
+                  <source srcset="img/popular-woman-2-desktop.png" media="(min-width: 1170px)">
+                  <source srcset="img/popular-woman-2-tablet.png" media="(min-width: 760px)">
+                  <img src="img/popular-woman-2.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+                </picture>
+                <div class="same-product__overlay">
+                  <h4 class="same-product__overlay-heading">Доступные размеры</h4>
+                  <ul class="same-product__measurements-list">
+                    <li class="same-product__measurements-item">42</li>
+                    <li class="same-product__measurements-item">44</li>
+                    <li class="same-product__measurements-item">46</li>
+                    <li class="same-product__measurements-item">48</li>
+                    <li class="same-product__measurements-item">50</li>
+                    <li class="same-product__measurements-item">52</li>
+                    <li class="same-product__measurements-item">54</li>
+                    <li class="same-product__measurements-item">56</li>
+                    <li class="same-product__measurements-item">58</li>
+                  </ul>
+                  <a class="same-product__quick-view  js-quick-view" href="#">
+                    <svg>
+                      <use xlink:href="#spr-view"></use>
+                    </svg>
+                    Быстрый просмотр
+                  </a>
+                </div>
+              </div>
+              <div class="same-product__info">
+                <h3 class="same-product__heading">
+                  Костюм медицинский К-74 «Фаина»
+                </h3>
+                <p class="same-product__price">
+                  900 руб
+                </p>
+                <a class="same-product__watch" href="#">
+                  <svg>
+                    <use xlink:href="#spr-view"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+
+            <li class="same-products__item  same-product">
+              <div class="same-product__image">
+                <p class="same-product__sticker  same-product__sticker--new">Новинка</p>
+                <p class="same-product__sticker  same-product__sticker--sale">Sale</p>
+                <p class="same-product__sticker  same-product__sticker--hit">Хит</p>
+                <picture>
+                  <source srcset="img/popular-woman-3-desktop.png" media="(min-width: 1170px)">
+                  <source srcset="img/popular-woman-3-tablet.png" media="(min-width: 760px)">
+                  <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+                </picture>
+                <div class="same-product__overlay">
+                  <h4 class="same-product__overlay-heading">Доступные размеры</h4>
+                  <ul class="same-product__measurements-list">
+                    <li class="same-product__measurements-item">42</li>
+                    <li class="same-product__measurements-item">44</li>
+                    <li class="same-product__measurements-item">46</li>
+                    <li class="same-product__measurements-item">48</li>
+                    <li class="same-product__measurements-item">50</li>
+                    <li class="same-product__measurements-item">52</li>
+                    <li class="same-product__measurements-item">54</li>
+                    <li class="same-product__measurements-item">56</li>
+                    <li class="same-product__measurements-item">58</li>
+                  </ul>
+                  <a class="same-product__quick-view  js-quick-view" href="#">
+                    <svg>
+                      <use xlink:href="#spr-view"></use>
+                    </svg>
+                    Быстрый просмотр
+                  </a>
+                </div>
+              </div>
+              <div class="same-product__info">
+                <h3 class="same-product__heading">
+                  Костюм медицинский К-74 «Фаина»
+                </h3>
+                <p class="same-product__price">
+                  900 руб
+                </p>
+                <a class="same-product__watch" href="#">
+                  <svg>
+                    <use xlink:href="#spr-view"></use>
+                  </svg>
+                </a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
     </main>
     <footer class="page__footer main-footer">
       <address class="main-footer__contacts contacts">
