--- a/source/choose-cloth.html
+++ b/source/choose-cloth.html
@@ -355,7 +355,10 @@
             <li class="cloth-selection__cards-item  cloth-card">
               <div class="cloth-card__general-description">
                 <p class="cloth-card__image">
-                  <img src="img/cloth-card.png" width="390" height="234" alt="Образец ткани">
+                  <picture>
+                    <source srcset="img/cloth-card.png" media="(min-width: 1170px)">
+                    <img src="img/cloth-card-tablet.png" alt="Образец ткани">
+                  </picture>
                 </p>
                 <div class="cloth-card__description-wrapper">
                   <h3 class="cloth-card__heading">Название ткани</h3>
@@ -421,7 +424,10 @@
             <li class="cloth-selection__cards-item  cloth-card">
               <div class="cloth-card__general-description">
                 <p class="cloth-card__image">
-                  <img src="img/cloth-card.png" width="390" height="234" alt="Образец ткани">
+                  <picture>
+                    <source srcset="img/cloth-card.png" media="(min-width: 1170px)">
+                    <img src="img/cloth-card-tablet.png" alt="Образец ткани">
+                  </picture>
                 </p>
                 <div class="cloth-card__description-wrapper">
                   <h3 class="cloth-card__heading">Название ткани</h3>
@@ -487,7 +493,10 @@
             <li class="cloth-selection__cards-item  cloth-card">
               <div class="cloth-card__general-description">
                 <p class="cloth-card__image">
-                  <img src="img/cloth-card.png" width="390" height="234" alt="Образец ткани">
+                  <picture>
+                    <source srcset="img/cloth-card.png" media="(min-width: 1170px)">
+                    <img src="img/cloth-card-tablet.png" alt="Образец ткани">
+                  </picture>
                 </p>
                 <div class="cloth-card__description-wrapper">
                   <h3 class="cloth-card__heading">Название ткани</h3>
