--- a/source/choose-color.html
+++ b/source/choose-color.html
@@ -385,7 +385,10 @@
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
               <p class="cloth-variants__image">
-                <img src="img/ph.png" width="310" height="223" alt="Образец ткани">
+                <picture>
+                  <source srcset="img/ph.png" media="(min-width: 1170px)">
+                  <img src="img/cloth-tablet.png" alt="Образец ткани">
+                </picture>
               </p>
               <table class="cloth-variants__table">
                 <tbody>
@@ -412,7 +415,10 @@
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
               <p class="cloth-variants__image">
-                <img src="img/ph.png" width="310" height="223" alt="Образец ткани">
+                <picture>
+                  <source srcset="img/ph.png" media="(min-width: 1170px)">
+                  <img src="img/cloth-tablet.png" alt="Образец ткани">
+                </picture>
               </p>
               <table class="cloth-variants__table">
                 <tbody>
@@ -439,7 +445,10 @@
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
               <p class="cloth-variants__image">
-                <img src="img/ph.png" width="310" height="223" alt="Образец ткани">
+                <picture>
+                  <source srcset="img/ph.png" media="(min-width: 1170px)">
+                  <img src="img/cloth-tablet.png" alt="Образец ткани">
+                </picture>
               </p>
               <table class="cloth-variants__table">
                 <tbody>
@@ -466,7 +475,10 @@
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
               <p class="cloth-variants__image">
-                <img src="img/ph.png" width="310" height="223" alt="Образец ткани">
+                <picture>
+                  <source srcset="img/ph.png" media="(min-width: 1170px)">
+                  <img src="img/cloth-tablet.png" alt="Образец ткани">
+                </picture>
               </p>
               <table class="cloth-variants__table">
                 <tbody>
@@ -493,7 +505,10 @@
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
               <p class="cloth-variants__image">
-                <img src="img/ph.png" width="310" height="223" alt="Образец ткани">
+                <picture>
+                  <source srcset="img/ph.png" media="(min-width: 1170px)">
+                  <img src="img/cloth-tablet.png" alt="Образец ткани">
+                </picture>
               </p>
               <table class="cloth-variants__table">
                 <tbody>
@@ -520,7 +535,10 @@
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
               <p class="cloth-variants__image">
-                <img src="img/ph.png" width="310" height="223" alt="Образец ткани">
+                <picture>
+                  <source srcset="img/ph.png" media="(min-width: 1170px)">
+                  <img src="img/cloth-tablet.png" alt="Образец ткани">
+                </picture>
               </p>
               <table class="cloth-variants__table">
                 <tbody>
@@ -547,7 +565,10 @@
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
               <p class="cloth-variants__image">
-                <img src="img/ph.png" width="310" height="223" alt="Образец ткани">
+                <picture>
+                  <source srcset="img/ph.png" media="(min-width: 1170px)">
+                  <img src="img/cloth-tablet.png" alt="Образец ткани">
+                </picture>
               </p>
               <table class="cloth-variants__table">
                 <tbody>
@@ -574,7 +595,10 @@
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
               <p class="cloth-variants__image">
-                <img src="img/ph.png" width="310" height="223" alt="Образец ткани">
+                <picture>
+                  <source srcset="img/ph.png" media="(min-width: 1170px)">
+                  <img src="img/cloth-tablet.png" alt="Образец ткани">
+                </picture>
               </p>
               <table class="cloth-variants__table">
                 <tbody>
@@ -601,7 +625,10 @@
             <li class="cloth-variants__item">
               <h3 class="cloth-variants__item-heading">Название ткани</h3>
               <p class="cloth-variants__image">
-                <img src="img/ph.png" width="310" height="223" alt="Образец ткани">
+                <picture>
+                  <source srcset="img/ph.png" media="(min-width: 1170px)">
+                  <img src="img/cloth-tablet.png" alt="Образец ткани">
+                </picture>
               </p>
               <table class="cloth-variants__table">
                 <tbody>
