--- a/source/orders-history.html
+++ b/source/orders-history.html
@@ -309,7 +309,10 @@
           <ul class="order-section__list">
             <li class="order-section__item  order-card">
               <p class="order-card__image">
-                <img src="img/order-woman-1.png" width="87" height="306" alt="Изображение костюма">
+                <picture>
+                  <source srcset="img/order-woman-1.png" media="(min-width: 1170px)">
+                  <img src="img/order-woman-1-tablet.png" alt="Изображение костюма">
+                </picture>
               </p>
               <div class="order-card__info-wrapper">
                 <h3 class="order-card__heading">Костюм медицинский к-74 «Фаина»</h3>
@@ -347,7 +350,10 @@
 
             <li class="order-section__item  order-card">
               <p class="order-card__image">
-                <img src="img/order-woman-1.png" width="87" height="306" alt="Изображение костюма">
+                <picture>
+                  <source srcset="img/order-woman-1.png" media="(min-width: 1170px)">
+                  <img src="img/order-woman-1-tablet.png" alt="Изображение костюма">
+                </picture>
               </p>
               <div class="order-card__info-wrapper">
                 <h3 class="order-card__heading">Костюм медицинский к-74 «Фаина»</h3>
