--- a/source/reviews.html
+++ b/source/reviews.html
@@ -296,7 +296,10 @@
         <h2 class="reviews__heading">Ваши отзывы</h2>
         <ul class="reviews__list">
           <li class="reviews__item">
-            <img class="reviews__image" src="img/review.jpg" width="219" height="244" alt="Фото клиента">
+            <picture>
+              <source srcset="img/review.jpg" media="(min-width: 1170px)">
+              <img class="reviews__image" src="img/review-tablet.png" alt="Фото клиента">
+            </picture>
             <div class="reviews__info">
               <h3 class="reviews__item-heading">ООО "Рога и копыта"</h3>
               <p class="reviews__description">
@@ -309,7 +312,10 @@
             </div>
           </li>
           <li class="reviews__item">
-            <img class="reviews__image" src="img/review.jpg" width="219" height="244" alt="Фото клиента">
+            <picture>
+              <source srcset="img/review.jpg" media="(min-width: 1170px)">
+              <img class="reviews__image" src="img/review-tablet.png" alt="Фото клиента">
+            </picture>
             <div class="reviews__info">
               <h3 class="reviews__item-heading">ООО "Рога и копыта"</h3>
               <p class="reviews__description">
