--- a/source/services.html
+++ b/source/services.html
@@ -327,7 +327,7 @@
         </div>
       </section>
 
-      <section class="page-services__representatives  representatives">
+      <section class="page-services__representatives  representatives  representatives--tablet-hidden">
         <div class="representatives__content">
           <h2 class="representatives__heading">
             Наши представители
