--- a/source/text.html
+++ b/source/text.html
@@ -305,13 +305,22 @@
         </p>
         <ul class="text-article__images">
           <li class="text-article__image">
-            <img src="img/text-article.jpg" width="365" height="267" alt="Изображение статьи">
+            <picture>
+              <source srcset="img/text-article.jpg" media="(min-width: 1170px)">
+              <img src="img/text-article-tablet.jpg" alt="Изображение статьи">
+            </picture>
           </li>
           <li class="text-article__image">
-            <img src="img/text-article.jpg" width="365" height="267" alt="Изображение статьи">
+            <picture>
+              <source srcset="img/text-article.jpg" media="(min-width: 1170px)">
+              <img src="img/text-article-tablet.jpg" alt="Изображение статьи">
+            </picture>
           </li>
           <li class="text-article__image">
-            <img src="img/text-article.jpg" width="365" height="267" alt="Изображение статьи">
+            <picture>
+              <source srcset="img/text-article.jpg" media="(min-width: 1170px)">
+              <img src="img/text-article-tablet.jpg" alt="Изображение статьи">
+            </picture>
           </li>
         </ul>>
       </section>
