--- a/source/catalog.html
+++ b/source/catalog.html
@@ -94,7 +94,10 @@
       <nav class="main-header__nav main-nav">
         <div class="main-nav__content">
           <a class="main-nav__logo" href="#">
-            <img src="img/logo-desktop.png" width="318" height="50" alt="логотип компании &laquo;Меркурий-Интер-Лаб&raquo;">
+            <picture>
+              <source srcset="img/logo-desktop.png" media="(min-width: 1170px)">
+              <img src="img/logo-tablet.png" alt="логотип компании &laquo;Меркурий-Интер-Лаб&raquo;">
+            </picture>
             <p class="main-nav__logo-description">Медицинская одежда, спецодежда и униформа</p>
           </a>
           <a class="main-nav__open-nav" href="#">
@@ -320,7 +323,10 @@
             </p>
           </div>
           <div class="catalog-category__image">
-            <img src="img/catalog-category.png" width="225" height="282" alt="Пример одежды категории Медицина">
+            <picture>
+              <source srcset="img/catalog-category.png" media="(min-width: 1170px)">
+              <img src="img/catalog-category-tablet.png" alt="Пример одежды категории Медицина">
+            </picture>
             <p class="catalog-category__title">
               Блузы
             </p>
@@ -790,7 +796,8 @@
                   <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
                   <p class="catalog-card__sticker  catalog-card__sticker--hit">Хит</p>
                   <picture>
-                    <source srcset="img/catalog-woman-1-desktop.png" media="(min-width: 760px)">
+                    <source srcset="img/catalog-woman-1-desktop.png" media="(min-width: 1170px)">
+                    <source srcset="img/catalog-woman-1-tablet.png" media="(min-width: 760px)">
                     <img src="img/popular-woman-1.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                   </picture>
 
@@ -836,7 +843,8 @@
                   <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
                   <p class="catalog-card__sticker  catalog-card__sticker--hit">Хит</p>
                   <picture>
-                    <source srcset="img/catalog-woman-2-desktop.png" media="(min-width: 760px)">
+                    <source srcset="img/catalog-woman-2-desktop.png" media="(min-width: 1170px)">
+                    <source srcset="img/catalog-woman-2-tablet.png" media="(min-width: 760px)">
                     <img src="img/popular-woman-2.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                   </picture>
                   <div class="catalog-card__overlay">
@@ -881,7 +889,8 @@
                   <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
                   <p class="catalog-card__sticker  catalog-card__sticker--hit">Хит</p>
                   <picture>
-                    <source srcset="img/catalog-woman-3-desktop.png" media="(min-width: 760px)">
+                    <source srcset="img/catalog-woman-3-desktop.png" media="(min-width: 1170px)">
+                    <source srcset="img/catalog-woman-3-tablet.png" media="(min-width: 760px)">
                     <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                   </picture>
                   <div class="catalog-card__overlay">
@@ -926,7 +935,8 @@
                   <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
                   <p class="catalog-card__sticker  catalog-card__sticker--hit">Хит</p>
                   <picture>
-                    <source srcset="img/catalog-woman-4-desktop.png" media="(min-width: 760px)">
+                    <source srcset="img/catalog-woman-4-desktop.png" media="(min-width: 1170px)">
+                    <source srcset="img/catalog-woman-4-tablet.png" media="(min-width: 760px)">
                     <img src="img/popular-woman-2.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                   </picture>
                   <div class="catalog-card__overlay">
@@ -971,7 +981,8 @@
                   <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
                   <p class="catalog-card__sticker  catalog-card__sticker--hit">Хит</p>
                   <picture>
-                    <source srcset="img/catalog-woman-2-desktop.png" media="(min-width: 760px)">
+                    <source srcset="img/catalog-woman-2-desktop.png" media="(min-width: 1170px)">
+                    <source srcset="img/catalog-woman-2-tablet.png" media="(min-width: 760px)">
                     <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                   </picture>
                   <div class="catalog-card__overlay">
@@ -1016,7 +1027,8 @@
                   <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
                   <p class="catalog-card__sticker  catalog-card__sticker--hit">Хит</p>
                   <picture>
-                    <source srcset="img/catalog-woman-5-desktop.png" media="(min-width: 760px)">
+                    <source srcset="img/catalog-woman-5-desktop.png" media="(min-width: 1170px)">
+                    <source srcset="img/catalog-woman-5-tablet.png" media="(min-width: 760px)">
                     <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                   </picture>
                   <div class="catalog-card__overlay">
@@ -1061,7 +1073,8 @@
                   <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
                   <p class="catalog-card__sticker  catalog-card__sticker--hit">Хит</p>
                   <picture>
-                    <source srcset="img/catalog-woman-4-desktop.png" media="(min-width: 760px)">
+                    <source srcset="img/catalog-woman-4-desktop.png" media="(min-width: 1170px)">
+                    <source srcset="img/catalog-woman-4-tablet.png" media="(min-width: 760px)">
                     <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                   </picture>
                   <div class="catalog-card__overlay">
@@ -1106,7 +1119,8 @@
                   <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
                   <p class="catalog-card__sticker  catalog-card__sticker--hit">Хит</p>
                   <picture>
-                    <source srcset="img/catalog-woman-2-desktop.png" media="(min-width: 760px)">
+                    <source srcset="img/catalog-woman-2-desktop.png" media="(min-width: 1170px)">
+                    <source srcset="img/catalog-woman-2-tablet.png" media="(min-width: 760px)">
                     <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                   </picture>
                   <div class="catalog-card__overlay">
@@ -1151,7 +1165,8 @@
                   <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
                   <p class="catalog-card__sticker  catalog-card__sticker--hit">Хит</p>
                   <picture>
-                    <source srcset="img/catalog-woman-4-desktop.png" media="(min-width: 760px)">
+                    <source srcset="img/catalog-woman-4-desktop.png" media="(min-width: 1170px)">
+                    <source srcset="img/catalog-woman-4-tablet.png" media="(min-width: 760px)">
                     <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                   </picture>
                   <div class="catalog-card__overlay">
@@ -1196,7 +1211,8 @@
                   <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
                   <p class="catalog-card__sticker  catalog-card__sticker--hit">Хит</p>
                   <picture>
-                    <source srcset="img/catalog-woman-2-desktop.png" media="(min-width: 760px)">
+                    <source srcset="img/catalog-woman-2-desktop.png" media="(min-width: 1170px)">
+                    <source srcset="img/catalog-woman-2-tablet.png" media="(min-width: 760px)">
                     <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                   </picture>
                   <div class="catalog-card__overlay">
@@ -1491,7 +1507,10 @@
 
           <div class="footer-categories__info  footer-info">
             <a class="footer-info__logo" href="#">
-              <img src="img/logo-desktop.png" width="318" height="50" alt="Логотип компании &laquo;Меркурий-Интер-Лаб&raquo;">
+              <picture>
+                <source srcset="img/logo-desktop.png" media="(min-width: 1170px)">
+                <img src="img/logo-tablet.png" alt="логотип компании &laquo;Меркурий-Интер-Лаб&raquo;">
+              </picture>
             </a>
             <ul class="footer-info__social">
               <li>
@@ -1521,13 +1540,22 @@
             </ul>
             <ul class="footer-info__pay-cards">
               <li class="footer-info__pay-cards-item">
-                <img src="img/visa.png" width="66" height="42" alt="логотип платёжной системы виза">
+                <picture>
+                  <source srcset="img/visa.png" media="(min-width: 1170px)">
+                  <img src="img/visa-tablet.png" alt="логотип платёжной системы виза">
+                </picture>
               </li>
               <li class="footer-info__pay-cards-item">
-                <img src="img/mastercard.png" width="47" height="36" alt="логотип платёжной системы мастеркард">
+                <picture>
+                  <source srcset="img/mastercard.png" media="(min-width: 1170px)">
+                  <img src="img/mastercard-tablet.png" alt="логотип платёжной системы мастеркард">
+                </picture>
               </li>
               <li class="footer-info__pay-cards-item">
-                <img src="img/maestro.png" width="66" height="41" alt="логотип платёжной системы маэстро">
+                <picture>
+                  <source srcset="img/maestro.png" media="(min-width: 1170px)">
+                  <img src="img/maestro-tablet.png" alt="логотип платёжной системы маэстро">
+                </picture>
               </li>
             </ul>
             <div class="footer-info__contacts">
